Moved buttons, added box shadow. Still have some alignment issues.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -29,10 +29,10 @@ a:hover, a:visited, a:active {
 
 .blue-button {
   background-color: #01395E;
-  border-radius: 5px;
   color: #00ECF2;
   border: solid #00ECF2 1px;
-  padding: 0.25em 1.2em;
+  padding: 0em 0.75em;
+  height: 2em;
   transition-duration: 0.3s;
 }
 
@@ -89,21 +89,23 @@ a:hover, a:visited, a:active {
   justify-self: stretch;
 }
 
+.bottom-shadow {
+  z-index: 100;
+  box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.12);
+}
+
 .title-bar {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  align-items: center;
   background-color: #001B2E;
-  color: white;
-  font-size: 2.5rem;
   width: 100%;
 }
 
-.title-circle-container {
-  display:flex;
-  flex-direction: row;
-  position: absolute;
-  right:0px;
-  top:0px;
+.title-bar-text {
+  background-color: #001B2E;
+  color: white;
+  font-size: 2rem;
 }
 
 .footer {
@@ -120,7 +122,7 @@ a:hover, a:visited, a:active {
 .column-header {
   display: flex;
   flex-direction: row;
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 .circle-text {
@@ -129,24 +131,23 @@ a:hover, a:visited, a:active {
 }
 
 .circle-text-large {
-  width: 1.8em;
-  height: 1.8em;
-  line-height: 1.75em;
-  margin-top: 0.15em;
-  margin-bottom: 0.15em;
-  font-size: 0.7em;
-  margin-right: 0.75em;
+  width: 2.5rem;
+  height: 2.5rem;
+  font-size: 1.5rem;
   flex-shrink: 0;
-  background-color: white;
-  color: black;
+  margin-bottom: -3px;
+  margin-left: 1rem;
+  margin-right: 1rem;;
+  background-color: #178FE8;
+  color: white;
 }
 
 .circle-text-small {
   line-height: 1.3em;
   height: 1.5em;
   width: 1.5em;
-  border: solid black 1px;
-  background-color: white;
+  background-color: #178FE8;
+  color: white;
   margin-left: auto;
 }
 
